# clevo-controler

./: .env  Cargo.toml  README.md  config.json  package-lock.json
clevo-controler/: Cargo.toml
clevo-controler/src/: cli.rs  lib.rs  main.rs
clevo-controler/src/communicate/: mod.rs  stream.rs
clevo-controler/src/component/: cpu.rs  fan.rs  mod.rs
clevo-controler/src/controler/: mod.rs
clevo-controler/src/domain/component/: cpu.rs  mod.rs
clevo-controler/src/domain/hardware/: mod.rs
clevo-controler/src/service/: core.rs
clevo-controler/src/temp_controler/: mod.rs  pid.rs
clevo-controler/src/ui/: mainwindow.rs  mod.rs
clevo-controler/src/ui/views/: ferris.rs
clevo-controlerd/: Cargo.toml
clevo-controlerd/src/: lib.rs  main.rs
clevo-controlerd/src/component/: cpu.rs  gpu.rs  mod.rs
clevo-controlerd/src/component/cpu/: intel.rs
clevo-controlerd/src/component/fan/: mod.rs
clevo-controlerd/src/component/gpu/: nvidia.rs
clevo-controlerd/src/hardware/: cpu.rs  mod.rs
clevo-controlerd/src/lowlevel/: mod.rs
clevo-controlerd/src/lowlevel/accessor/: ec.rs  fd.rs  intel_rpal.rs  mod.rs
clevo-controlerd/src/lowlevel/components/: fan.rs
clevo-controlerd/src/lowlevel/middleware/: fan.rs
clevo-controlerd/src/service/: core.rs
clevo-controller/: Cargo.toml
clevo-controller/src/: main.rs
clevo-controller/src/component/: cpu.rs  fan.rs  gpu.rs  mod.rs
clevo-controller/src/service/: core.rs  mod.rs
clevo-controller/src/temp_controler/: mod.rs  pid.rs  table.rs
clevo-controllerd/: Cargo.toml
clevo-controllerd/src/: main.rs
clevo-controllerd/src/component/: mod.rs
clevo-controllerd/src/component/cpu/: intel.rs  mod.rs
clevo-controllerd/src/component/fan/: mod.rs
clevo-controllerd/src/component/gpu/: nvidia.rs
clevo-controllerd/src/lowlevel/accessor/: fd.rs
clevo-controllerd/src/service/: core.rs
clevo-fancontrol/: Cargo.toml
clevo-fancontrol/src/: lib.rs  main.rs
clevo-fancontrol/src/commu/: action.rs  localstream.rs  mod.rs
clevo-fancontrol/src/communicate/: proto.rs  query.rs  stream.rs
clevo-fancontrol/src/controler/: table.rs
clevo-fancontrol/src/domain/: mod.rs  workload.rs
clevo-fancontrol/src/domain/hardware/: cpu.rs  gpu.rs  mod.rs
clevo-fancontrol/src/domain/hardware/field/: fan_speed.rs  freq.rs  identifier.rs  mod.rs  power.rs  temp.rs  usage.rs
clevo-fancontrol/src/domain/hw/: ctrler.rs  mod.rs  parameter.rs
clevo-fancontrol/src/domain/hw/field/: fan.rs  hwname.rs  mod.rs  usage.rs
clevo-fancontrol/src/service/: core.rs  mod.rs
clevo-fancontrol/src/ui/: tray.rs
clevo-fancontrold/: Cargo.toml
clevo-fancontrold/src/: lib.rs  main.rs
clevo-fancontrold/src/commu/: handler.rs  listener.rs
clevo-fancontrold/src/communicate/: handler.rs  mod.rs  reply.rs
clevo-fancontrold/src/excutor/: mod.rs
clevo-fancontrold/src/excutor/accessor/: mod.rs
clevo-fancontrold/src/excutor/peripheries/: fan.rs
clevo-fancontrold/src/hardware/: cpu.rs  mod.rs
clevo-fancontrold/src/hardware/accessor/: ec.rs
clevo-fancontrold/src/hardware/peripheries/: fan.rs
clevo-fancontrold/src/hardware/workers/: cpu.rs
clevo-fancontrold/src/service/: core.rs
lib/: Cargo.toml
lib/src/: lib.rs  proto.rs  stream.rs
lib/src/field/: category.rs  desc.rs  fan_speed.rs  freq.rs  mod.rs  power.rs  temp.rs  usage.rs
