[package]
name = "clevo-controller"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "clevo-controller"
path = "src/main.rs"

[dependencies]
interprocess = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
dotenv = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0" }
lib = { path = "../lib" }
ksni = { version = "0.3.1" }
tokio = { version = "1.44.1" }

[build-dependencies]
