[package]
name = "clevo-controllerd"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "clevo-controllerd"
path = "src/main.rs"

[dependencies]
lib = { path = "../lib" }
libc = { version = "0.2.171" }
x86 = { version = "0.52.0" }
sysinfo = { version = "0.34.2" }
nvml-wrapper = { version = "0.10.0" }
once_cell = { version = "1.21.3" }
lazy_static = { version = "1.5.0" }
interprocess = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
dotenv = { workspace = true }
