[package]
name = "clevo-fancontrol"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
lib = { path = "../lib" }
slint = { version = "1.10.0" }
ksni = { version = "0.3.1" }
tokio = { version = "1.44.1" }
interprocess = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
dotenv = { workspace = true }
uuid = { version = "1.16.0", features = ["v4"] }

[build-dependencies]
slint-build = { version = "1.10.0" }
